// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainWrapper /> Should render correctly 1`] = `
.c0 {
  width: 100%;
}

<div>
  <main
    class="c0"
    id="main"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;

exports[`<MainWrapper /> Should render correctly with custom className 1`] = `
.c0 {
  width: 100%;
}

<div>
  <main
    class="c0 test-custom-classname"
    id="main"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;
